name:               hakyll-blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            MIT

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.5
                  , github
  ghc-options:      -threaded
  default-language: Haskell2010
